# codernic.dev

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
apps/codernic-ext/: .eslintrc.json  .gitignore  .vscodeignore  CHEATSHEET.md  CODERNIC_README.md  LICENSE  README.md  esbuild.config.mjs  jest.config.js  package.json  prod.env  tailwind.config.js  test-bridge.mjs  test-sdk.mjs  test-sse.mjs  test_save.cjs  test_ws.mjs  tsconfig.base.json  tsconfig.build.json  tsconfig.json  tsconfig.webview.json  vite.canvas.config.ts  vite.webview.config.ts
apps/codernic-ext/media/: codernic-icons.css  codernic-icons.html  codernic-icons.json  codernic-icons.ts
apps/codernic-ext/scripts/: copy-flows.js  copy-structura.js
apps/codernic-ext/src/: extension.ts  (+1 more)
apps/codernic-ui/: .env.production  CHEATSHEET.md  README.md  fix-saga.js  fix-saga.mjs  fix.cjs  fix_generator.cjs  fix_state_any.cjs  fix_state_any.js  get_schemas.js  index.html  migrate-widgets.py  package.json  playwright.config.ts  tailwind.config.js  test-ui.mjs  test_factories.js  test_format.js  tsconfig.app.json  vite.config.ts  vite.webview.config.ts
apps/vscode-extension/: .eslintignore  .gitignore  README.md  dev.env  package.json  tsconfig.webview.json
apps/wiki/: Dockerfile  docker-compose.yml  package-lock.json  package.json
crates/protocol/: Cargo.toml  README.md
crates/protocol/src/: erathos.rs  lib.rs  license.rs
documentation/: cheatsheet.md  competitor_matrix.md
documentation/capabilities/: analyzer.md  erathos.md  galileus.md  pirsig.md  ragtime.md  supervisor.md
(+662 files in other folders)
